--- a/Dama/Dama.cbp
+++ b/Dama/Dama.cbp
@@ -5,6 +5,7 @@
 		<Option title="Dama" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
+		<Option virtualFolders="Functions\;Funzioni\Player\;Funzioni\Board\;" />
 		<Build>
 			<Target title="Debug">
 				<Option output="bin/Debug/Dama" prefix_auto="1" extension_auto="1" />
@@ -31,6 +32,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="dama.h" />
+		<Unit filename="functions/board_display.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
